feat(scripts.main) Adds the main ui.canon module with the dependencies

--- a/examples/index.html
+++ b/examples/index.html
@@ -23,7 +23,7 @@
       },
     ];
 
-    angular.module('app', ['ui.canon.tooltip', 'ui.canon.button', 'ui.canon.list']);
+    angular.module('app', ['ui.canon']);
 
     angular.module('app').controller('MainCtrl', ['$scope', '$timeout', function($scope, $timeout){
       $scope.items = items;
